flux/apps/apprise/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apprise
  namespace: apprise
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: apprise
  template:
    metadata:
      labels:
        app.kubernetes.io/name: apprise
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      securityContext:
        runAsUser: 2000
        runAsGroup: 2000
        fsGroup: 2000
        readOnlyRootFilesystem: true
      containers:
        - name: apprise
          image: docker.io/caronc/apprise:v1.5.4
          podSecurityContext:
            fsGroup: 2000
            fsGroupChangePolicy: "Always"
          ports:
            - name: apprise-http
              containerPort: 8000
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: apprise-config
            - mountPath: /attachments
              name: apprise-attachments
          livenessProbe:
            tcpSocket:
              port: apprise-http
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /status
              port: apprise-http
            initialDelaySeconds: 10
            timeoutSeconds: 5
          resources:
            requests:
              memory: "250M"
              cpu: ".25"
            limits:
              memory: "1G"
              cpu: "1"

      volumes:
        - name: apprise-config
          persistentVolumeClaim:
            claimName: apprise-config
        - name: apprise-attachments
          persistentVolumeClaim:
            claimName: apprise-attachments
