flux/apps/apprise/service.yml
apiVersion: v1
kind: Service
metadata:
  name: apprise
  namespace: apprise
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: apprise
  ports:
    - name: apprise-http
      port: 8000
      targetPort: apprise-http
      protocol: TCP
