flux/apps/apprise/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: apprise-web-route
  namespace: apprise
spec:
  parentRefs:
    - name: main-gateway
      namespace: traefik

  hostnames:
    - apprise.tartarus.us

  rules:
    - backendRefs:
        - name: apprise
          port: 8000
